@@ -4,6 +4,7 @@
 	- popt 1.10.1 to preserve newer.
 	- use package color as Obsoletes: color.
 	- upgrade to db-4.3.27.
+	- revert MAGIC_COMPRESS, real fix is in libmagic (#143782).
 
 4.3.3 -> 4.4:
 	- pentium3/pentium4 arch support (pluto@PLD).
